Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>MKNotification, easy and handy jQuery plugin!</p>
 
-<p>![](<a href="https://wpajans.net/jQuery/MKNotification/1.png">https://wpajans.net/jQuery/MKNotification/1.png</a></p>
+<p><img src="https://wpajans.net/jQuery/MKNotification/1.png" alt=""></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
